--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "vue": {
+    "outputDir": "docs",
+    "publicPath": "/testthing/"
+  },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gsap": "^3.7.1",
+    "video.js": "^7.13.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
